@@ -73,7 +73,7 @@ def updateMap(processMap,xsecDB,key,nb_of_events,weight):
     pass
     return processMap
 
-def getMCInfo(config,isSignal=False):
+def getMCInfo(config):
     myMap={}
     xsecDB = ROOT.SUSY.CrossSectionDB(config.xsecfile)
 
@@ -89,7 +89,7 @@ def getMCInfo(config,isSignal=False):
         channel = int(file.split(".")[int(config.NB)])
         if len(lds) and not channel in lds: continue
 
-        if ( not isSignal and xsecDB.rawxsect(channel) < 0. ): 
+        if ( not config.isSignal and xsecDB.rawxsect(channel) < 0. ): 
             print 'No cross section for sample',channel,'skip file',file
             continue
 
@@ -97,7 +97,7 @@ def getMCInfo(config,isSignal=False):
         fname = file
         if fname.startswith('/eos'): fname = 'root://eosatlas/'+fname
         tfile=ROOT.TFile.Open(fname)
-        hist=tfile.Get(config.histname)
+        hist=tfile.Get('Counter_JobBookeeping_JobBookeeping')
         if hist!=None and hist.GetNbinsX()>=2:
             # if not channel in hsum:
             #     hsum[channel] = copy.deepcopy(ROOT.TH1D(hist))
@@ -105,15 +105,29 @@ def getMCInfo(config,isSignal=False):
             #     hsum[channel].Add(hist)
             nb_of_events=0
             weight=0
-            if isSignal==False:
+            if config.isSignal==False:
                 nb_of_events=hist.GetBinContent(1)
                 weight=hist.GetBinContent(2)
                 updateMap(myMap,xsecDB,channel,nb_of_events,weight)
             else:
-                for ybin in range(1,hist.GetNbinsY()+1):
-                    nb_of_events=hist.GetBinContent(1,ybin)
-                    weight=hist.GetBinContent(2,ybin)
-                    if nb_of_events>0 : updateMap(myMap,xsecDB,(channel,ybin-1),nb_of_events,weight)
+                """
+                gets complicated with derivations: from JobBookeeping we
+                can extract the sum of weights for all events before skimming
+                but we don't know for which hardproc. All we can do is calculate
+                the average efficiency of the derivation over hardprocs and
+                rescale for that. Would be OK for simplified models but can
+                be really wrong if many very different processes are present.
+                """
+                hist2=tfile.Get('Counter_for_ZeroLeptonCounterSRAll')
+                sumwini = hist.GetBinContent(2)
+                sumwkept = 0.
+                for ybin in range(1,hist2.GetNbinsY()+1):
+                    sumwkept+=hist2.GetBinContent(2,ybin)
+                scale = sumwini/sumwkept
+                for ybin in range(1,hist2.GetNbinsY()+1):
+                    nb_of_events=hist2.GetBinContent(1,ybin)
+                    weight=hist2.GetBinContent(2,ybin)
+                    if nb_of_events>0 : updateMap(myMap,xsecDB,(channel,ybin-1),nb_of_events*scale,weight*scale)
             tfile.Close()
 
         else:
@@ -123,7 +137,7 @@ def getMCInfo(config,isSignal=False):
 
     f=open(config.outputfilename,'w')
     ftex=open(config.outputfilename.split('.')[0]+'.tex','w')
-    if isSignal==False:
+    if config.isSignal==False:
         f.write("id/I:name/C:xsec/F:kfac/F:eff/F:relunc/F:sumw/F:stat/F\n")
         ftex.write(r"""\begin{table}
 \scriptsize
@@ -166,7 +180,7 @@ Dataset ID & Dataset name & $\sigma \times \epsilon$ [pb] & $N_{gen}$ & $\mathca
         for key,info in sorted(myMap.items()):
             channel = key[0]
             hardproc = key[1]
-            line=str(channel)+" "+str(hardproc)+" "+str(xsecDB.rawxsect(channel,hardproc))+" "+str(xsecDB.kfactor(channel,hardproc))+" "+str(xsecDB.efficiency(channel,hardproc))+" "+str(xsecDB.rel_uncertainty(channel,hardproc))+" "+str(info[1])+" "+str(info[0])#not very optimal
+            line=str(channel)+" "+str(hardproc)+" "+str(xsecDB.rawxsect(channel,hardproc))+" "+str(xsecDB.kfactor(channel,hardproc))+" "+str(xsecDB.efficiency(channel,hardproc))+" "+str(xsecDB.rel_uncertainty(channel,hardproc))+" "+str(info[1])+" "+str(int(round(info[0])))#not very optimal
             #print line
             f.write(line+"\n")
 
@@ -188,8 +202,6 @@ Dataset ID & Dataset name & $\sigma \times \epsilon$ [pb] & $N_{gen}$ & $\mathca
 def parseCmdLine(args):
     from optparse import OptionParser
     parser = OptionParser()
-    parser.add_option("--histname", dest="histname", help="histogram name containing stat and sum weight information",
-                      default="Counter_JobBookeeping_JobBookeeping")
     parser.add_option("--xsecfile", dest="xsecfile", help="cross section file", default="SUSYTools/data/susy_crosssections_13TeV.txt")
     parser.add_option("--input", dest="inputfilename", help="List of input filenames", default="")
     parser.add_option("--output", dest="outputfilename", help="output filename", default="MCBackgroundDB.dat")
@@ -227,4 +239,4 @@ if __name__ == '__main__':
         sys.exit(1)
 
 
-    myMap=getMCInfo(config,config.isSignal)
+    myMap=getMCInfo(config)
