@@ -1,8 +1,12 @@
+22-Jul-2015 Laurent Duflot
+	* FilterUpdateMerge.py, getMCInfo.py: add protections for signal samples
+	* getMCInfo.py: better treatment of signal samples with derivation
+	(still not 100% correct for complex sample with multiple processes)
+
 20-Jul-2015 Laurent Duflot
 	* python: add scripts to validate production: running on all files,
 	look for duplicate events
 	* INSTALL: new version of cafe
-
 
 18-Jul-2015 Laurent Duflot
 	* FilterUpdateMerge.py, getMCInfo.py: skip samples with no cross-section available
